--- a/puzzle/fft-r1-model.ipynb
+++ b/puzzle/fft-r1-model.ipynb
@@ -1115,11 +1115,664 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfms1 = dfms.drop[]"
+    "dfms1 = dfms.drop(columns=['std_tiles','std_manhatan'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n</th>\n",
+       "      <th>mean_tiles</th>\n",
+       "      <th>mean_manhatan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8.12</td>\n",
+       "      <td>9.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7.73</td>\n",
+       "      <td>19.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>44.30</td>\n",
+       "      <td>167.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14.40</td>\n",
+       "      <td>130.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>166.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>17.80</td>\n",
+       "      <td>489.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>26.60</td>\n",
+       "      <td>966.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>26.20</td>\n",
+       "      <td>585.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
+       "      <td>15.30</td>\n",
+       "      <td>618.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>436.50</td>\n",
+       "      <td>4645.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>243.50</td>\n",
+       "      <td>7425.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>28.40</td>\n",
+       "      <td>2890.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>273.20</td>\n",
+       "      <td>7431.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>18</td>\n",
+       "      <td>121.10</td>\n",
+       "      <td>5848.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>19</td>\n",
+       "      <td>31.10</td>\n",
+       "      <td>4793.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>18.20</td>\n",
+       "      <td>2923.90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     n  mean_tiles  mean_manhatan\n",
+       "0    5        8.12           9.88\n",
+       "1    6        7.73          19.89\n",
+       "2    7       44.30         167.30\n",
+       "3    8       14.40         130.20\n",
+       "4    9       20.00         166.00\n",
+       "5   10       17.80         489.90\n",
+       "6   11       26.60         966.00\n",
+       "7   12       26.20         585.20\n",
+       "8   13       15.30         618.00\n",
+       "9   14      436.50        4645.40\n",
+       "10  15      243.50        7425.70\n",
+       "11  16       28.40        2890.00\n",
+       "12  17      273.20        7431.40\n",
+       "13  18      121.10        5848.50\n",
+       "14  19       31.10        4793.30\n",
+       "15  20       18.20        2923.90"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfms1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n</th>\n",
+       "      <th>mean_tiles</th>\n",
+       "      <th>mean_manhatan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8.12</td>\n",
+       "      <td>9.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7.73</td>\n",
+       "      <td>19.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>44.30</td>\n",
+       "      <td>167.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14.40</td>\n",
+       "      <td>130.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>166.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>17.80</td>\n",
+       "      <td>489.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>26.60</td>\n",
+       "      <td>966.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>26.20</td>\n",
+       "      <td>585.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
+       "      <td>15.30</td>\n",
+       "      <td>618.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>436.50</td>\n",
+       "      <td>4645.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>243.50</td>\n",
+       "      <td>7425.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>28.40</td>\n",
+       "      <td>2890.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>273.20</td>\n",
+       "      <td>7431.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>18</td>\n",
+       "      <td>121.10</td>\n",
+       "      <td>5848.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>19</td>\n",
+       "      <td>31.10</td>\n",
+       "      <td>4793.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>18.20</td>\n",
+       "      <td>2923.90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     n  mean_tiles  mean_manhatan\n",
+       "0    5        8.12           9.88\n",
+       "1    6        7.73          19.89\n",
+       "2    7       44.30         167.30\n",
+       "3    8       14.40         130.20\n",
+       "4    9       20.00         166.00\n",
+       "5   10       17.80         489.90\n",
+       "6   11       26.60         966.00\n",
+       "7   12       26.20         585.20\n",
+       "8   13       15.30         618.00\n",
+       "9   14      436.50        4645.40\n",
+       "10  15      243.50        7425.70\n",
+       "11  16       28.40        2890.00\n",
+       "12  17      273.20        7431.40\n",
+       "13  18      121.10        5848.50\n",
+       "14  19       31.10        4793.30\n",
+       "15  20       18.20        2923.90"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfms1.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfms2 = dfms.drop(columns=['mean_tiles','mean_manhatan'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n</th>\n",
+       "      <th>std_tiles</th>\n",
+       "      <th>std_manhatan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.081</td>\n",
+       "      <td>4.329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.503</td>\n",
+       "      <td>6.306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2.983</td>\n",
+       "      <td>14.190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3.406</td>\n",
+       "      <td>20.596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4.295</td>\n",
+       "      <td>23.281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5.514</td>\n",
+       "      <td>27.493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>6.398</td>\n",
+       "      <td>45.609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5.827</td>\n",
+       "      <td>29.877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5.658</td>\n",
+       "      <td>38.338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>53.244</td>\n",
+       "      <td>75.260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>59.219</td>\n",
+       "      <td>147.481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>5.948</td>\n",
+       "      <td>59.996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>56.503</td>\n",
+       "      <td>207.137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>18</td>\n",
+       "      <td>31.374</td>\n",
+       "      <td>148.017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>19</td>\n",
+       "      <td>13.237</td>\n",
+       "      <td>92.713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>8.638</td>\n",
+       "      <td>53.919</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     n  std_tiles  std_manhatan\n",
+       "0    5      1.081         4.329\n",
+       "1    6      1.503         6.306\n",
+       "2    7      2.983        14.190\n",
+       "3    8      3.406        20.596\n",
+       "4    9      4.295        23.281\n",
+       "5   10      5.514        27.493\n",
+       "6   11      6.398        45.609\n",
+       "7   12      5.827        29.877\n",
+       "8   13      5.658        38.338\n",
+       "9   14     53.244        75.260\n",
+       "10  15     59.219       147.481\n",
+       "11  16      5.948        59.996\n",
+       "12  17     56.503       207.137\n",
+       "13  18     31.374       148.017\n",
+       "14  19     13.237        92.713\n",
+       "15  20      8.638        53.919"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfms2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n</th>\n",
+       "      <th>std_tiles</th>\n",
+       "      <th>std_manhatan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.081</td>\n",
+       "      <td>4.329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.503</td>\n",
+       "      <td>6.306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2.983</td>\n",
+       "      <td>14.190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3.406</td>\n",
+       "      <td>20.596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4.295</td>\n",
+       "      <td>23.281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5.514</td>\n",
+       "      <td>27.493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>6.398</td>\n",
+       "      <td>45.609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5.827</td>\n",
+       "      <td>29.877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5.658</td>\n",
+       "      <td>38.338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>53.244</td>\n",
+       "      <td>75.260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>59.219</td>\n",
+       "      <td>147.481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>5.948</td>\n",
+       "      <td>59.996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>56.503</td>\n",
+       "      <td>207.137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>18</td>\n",
+       "      <td>31.374</td>\n",
+       "      <td>148.017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>19</td>\n",
+       "      <td>13.237</td>\n",
+       "      <td>92.713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>8.638</td>\n",
+       "      <td>53.919</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     n  std_tiles  std_manhatan\n",
+       "0    5      1.081         4.329\n",
+       "1    6      1.503         6.306\n",
+       "2    7      2.983        14.190\n",
+       "3    8      3.406        20.596\n",
+       "4    9      4.295        23.281\n",
+       "5   10      5.514        27.493\n",
+       "6   11      6.398        45.609\n",
+       "7   12      5.827        29.877\n",
+       "8   13      5.658        38.338\n",
+       "9   14     53.244        75.260\n",
+       "10  15     59.219       147.481\n",
+       "11  16      5.948        59.996\n",
+       "12  17     56.503       207.137\n",
+       "13  18     31.374       148.017\n",
+       "14  19     13.237        92.713\n",
+       "15  20      8.638        53.919"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfms2.head(20)"
    ]
   }
  ],
