--- a/dos results ver 1/router fetch/fft-r1-model-prep.ipynb
+++ b/dos results ver 1/router fetch/fft-r1-model-prep.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -507,7 +507,7 @@
        "[56917 rows x 30 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -912,7 +912,7 @@
        "[89541 rows x 30 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -975,20 +975,422 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "df1 = pd.read_csv('fft-r1-df1gm.csv')\n",
+    "df1['sim'] = 1\n",
     "df2 = pd.read_csv('fft-r1-df2gm.csv')\n",
+    "df2['sim'] = 2\n",
     "df3 = pd.read_csv('fft-r1-df3gm.csv')\n",
+    "df3['sim'] = 3\n",
     "df4 = pd.read_csv('fft-r1-df4gm.csv')\n",
-    "df5 = pd.read_csv('fft-r1-df5gm.csv')"
+    "df4['sim'] = 4\n",
+    "df5 = pd.read_csv('fft-r1-df5gm.csv')\n",
+    "df5['sim'] = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>outport</th>\n",
+       "      <th>inport</th>\n",
+       "      <th>cache_coherence_type</th>\n",
+       "      <th>flit_id</th>\n",
+       "      <th>flit_type</th>\n",
+       "      <th>vnet</th>\n",
+       "      <th>vc</th>\n",
+       "      <th>src_ni</th>\n",
+       "      <th>src_router</th>\n",
+       "      <th>...</th>\n",
+       "      <th>packet_max_index</th>\n",
+       "      <th>port_index</th>\n",
+       "      <th>cache_coherence_flit_index</th>\n",
+       "      <th>flit_index</th>\n",
+       "      <th>traversal_index</th>\n",
+       "      <th>cache_coherence_vnet_index</th>\n",
+       "      <th>vnet_vc_index</th>\n",
+       "      <th>vnet_vc_cc_index</th>\n",
+       "      <th>target</th>\n",
+       "      <th>sim</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>27</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>112</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>27</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>27</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>84</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>27</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>17</td>\n",
+       "      <td>23</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>146453</td>\n",
+       "      <td>3268816</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>25</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>24</td>\n",
+       "      <td>480984</td>\n",
+       "      <td>18</td>\n",
+       "      <td>27</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>146454</td>\n",
+       "      <td>3268823</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40</td>\n",
+       "      <td>8</td>\n",
+       "      <td>18</td>\n",
+       "      <td>36</td>\n",
+       "      <td>721476</td>\n",
+       "      <td>18</td>\n",
+       "      <td>27</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>146455</td>\n",
+       "      <td>3268830</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>45</td>\n",
+       "      <td>8</td>\n",
+       "      <td>24</td>\n",
+       "      <td>48</td>\n",
+       "      <td>961968</td>\n",
+       "      <td>18</td>\n",
+       "      <td>27</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>146456</td>\n",
+       "      <td>3268837</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40</td>\n",
+       "      <td>8</td>\n",
+       "      <td>30</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1803690</td>\n",
+       "      <td>18</td>\n",
+       "      <td>27</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>146457</td>\n",
+       "      <td>3268838</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>25</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>160336</td>\n",
+       "      <td>6</td>\n",
+       "      <td>30</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>146458 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        timestamp  outport  inport  cache_coherence_type  flit_id  flit_type  \\\n",
+       "0               7        2       0                     1        1          4   \n",
+       "1              11        2       4                     1        1          4   \n",
+       "2              11        2       4                     1        1          4   \n",
+       "3              84        4       2                     1        1          4   \n",
+       "4              84        0       1                     4        1          1   \n",
+       "...           ...      ...     ...                   ...      ...        ...   \n",
+       "146453    3268816        4       2                     6        2          2   \n",
+       "146454    3268823        4       2                     6        3          2   \n",
+       "146455    3268830        4       2                     6        4          2   \n",
+       "146456    3268837        4       2                     6        5          3   \n",
+       "146457    3268838        4       2                     2        1          4   \n",
+       "\n",
+       "        vnet  vc  src_ni  src_router  ...  packet_max_index  port_index  \\\n",
+       "0          3   9       1           1  ...                64           0   \n",
+       "1          3   9       0           0  ...               112           8   \n",
+       "2          3   9       0           0  ...                 4           8   \n",
+       "3          3   9       3           3  ...                 4           8   \n",
+       "4          5  17      23           7  ...               144           0   \n",
+       "...      ...  ..     ...         ...  ...               ...         ...   \n",
+       "146453     3   9      18           2  ...                25           8   \n",
+       "146454     3   9      18           2  ...                40           8   \n",
+       "146455     3   9      18           2  ...                45           8   \n",
+       "146456     3   9      18           2  ...                40           8   \n",
+       "146457     3  10      18           2  ...                25           8   \n",
+       "\n",
+       "        cache_coherence_flit_index  flit_index  traversal_index  \\\n",
+       "0                                1           4                4   \n",
+       "1                                1           4                0   \n",
+       "2                                1           4                0   \n",
+       "3                                1           4                8   \n",
+       "4                                4           4                4   \n",
+       "...                            ...         ...              ...   \n",
+       "146453                          12          24           480984   \n",
+       "146454                          18          36           721476   \n",
+       "146455                          24          48           961968   \n",
+       "146456                          30          90          1803690   \n",
+       "146457                           2           8           160336   \n",
+       "\n",
+       "        cache_coherence_vnet_index  vnet_vc_index  vnet_vc_cc_index  target  \\\n",
+       "0                                3             27                 9       0   \n",
+       "1                                3             27                 9       0   \n",
+       "2                                3             27                 9       1   \n",
+       "3                                3             27                 9       1   \n",
+       "4                               20             85               100       0   \n",
+       "...                            ...            ...               ...     ...   \n",
+       "146453                          18             27                54       1   \n",
+       "146454                          18             27                54       1   \n",
+       "146455                          18             27                54       1   \n",
+       "146456                          18             27                54       1   \n",
+       "146457                           6             30                18       1   \n",
+       "\n",
+       "        sim  \n",
+       "0         1  \n",
+       "1         1  \n",
+       "2         1  \n",
+       "3         1  \n",
+       "4         1  \n",
+       "...     ...  \n",
+       "146453    1  \n",
+       "146454    1  \n",
+       "146455    1  \n",
+       "146456    1  \n",
+       "146457    1  \n",
+       "\n",
+       "[146458 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -998,10 +1400,10 @@
     {
      "data": {
       "text/plain": [
-       "(413299, 30)"
+       "(413299, 31)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
