edited sim details to sim 5

--- a/dos results ver 1/router fetch/fft-r1-model-prep.ipynb
+++ b/dos results ver 1/router fetch/fft-r1-model-prep.ipynb
@@ -1418,6 +1418,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df5['sim_traversal'] = df5['sim']*df5['traversal_id']\n",
+    "df5.to_csv('fft-r1-df5gms.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
