--- a/dos results ver 1/router fetch/fft-r1-model-prep-single.ipynb
+++ b/dos results ver 1/router fetch/fft-r1-model-prep-single.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -89,7 +89,6 @@
    "outputs": [],
    "source": [
     "dfg1 = pd.read_csv('2-fft-normal-n-0-3-data-r1-good-single.csv')\n",
-    "\n",
     "dfm1 = pd.read_csv('2-fft-normal-n-0-3-m-9-data-r1-mal.csv')\n",
     "dfm2 = pd.read_csv('2-fft-normal-n-0-3-m-1-data-r1-mal.csv')\n",
     "dfm3 = pd.read_csv('2-fft-normal-n-0-3-m-15-data-r1-mal.csv')"
@@ -107,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -501,7 +500,7 @@
        "[56917 rows x 30 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -906,7 +905,7 @@
        "[51294 rows x 30 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,439 +916,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1 = dfg1.append(dfm1, ignore_index=True,sort=False)\n",
-    "df1 = df1.sort_values('timestamp')\n",
-    "df1.to_csv('fft-r1-df1gm-single.csv',index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(108211, 30)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df1.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv('fft-r1-df1gm-single.csv')\n",
-    "df1['sim'] = 1\n",
+    "dfg1['sim'] = 1\n",
+    "dfm1['sim'] = 1\n",
     "dfm2['sim'] = 1\n",
     "dfm3['sim'] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>outport</th>\n",
-       "      <th>inport</th>\n",
-       "      <th>cache_coherence_type</th>\n",
-       "      <th>flit_id</th>\n",
-       "      <th>flit_type</th>\n",
-       "      <th>vnet</th>\n",
-       "      <th>vc</th>\n",
-       "      <th>src_ni</th>\n",
-       "      <th>src_router</th>\n",
-       "      <th>...</th>\n",
-       "      <th>packet_max_index</th>\n",
-       "      <th>port_index</th>\n",
-       "      <th>cache_coherence_flit_index</th>\n",
-       "      <th>flit_index</th>\n",
-       "      <th>traversal_index</th>\n",
-       "      <th>cache_coherence_vnet_index</th>\n",
-       "      <th>vnet_vc_index</th>\n",
-       "      <th>vnet_vc_cc_index</th>\n",
-       "      <th>target</th>\n",
-       "      <th>sim</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>27</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>27</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>84</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>16</td>\n",
-       "      <td>3</td>\n",
-       "      <td>27</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>84</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>27</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>216</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>24</td>\n",
-       "      <td>3</td>\n",
-       "      <td>27</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>108206</td>\n",
-       "      <td>3268816</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>25</td>\n",
-       "      <td>8</td>\n",
-       "      <td>12</td>\n",
-       "      <td>24</td>\n",
-       "      <td>481008</td>\n",
-       "      <td>18</td>\n",
-       "      <td>27</td>\n",
-       "      <td>54</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>108207</td>\n",
-       "      <td>3268823</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>40</td>\n",
-       "      <td>8</td>\n",
-       "      <td>18</td>\n",
-       "      <td>36</td>\n",
-       "      <td>721512</td>\n",
-       "      <td>18</td>\n",
-       "      <td>27</td>\n",
-       "      <td>54</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>108208</td>\n",
-       "      <td>3268830</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>45</td>\n",
-       "      <td>8</td>\n",
-       "      <td>24</td>\n",
-       "      <td>48</td>\n",
-       "      <td>962016</td>\n",
-       "      <td>18</td>\n",
-       "      <td>27</td>\n",
-       "      <td>54</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>108209</td>\n",
-       "      <td>3268837</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>40</td>\n",
-       "      <td>8</td>\n",
-       "      <td>30</td>\n",
-       "      <td>90</td>\n",
-       "      <td>1803780</td>\n",
-       "      <td>18</td>\n",
-       "      <td>27</td>\n",
-       "      <td>54</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>108210</td>\n",
-       "      <td>3268838</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>25</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "      <td>160344</td>\n",
-       "      <td>6</td>\n",
-       "      <td>30</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>108211 rows × 31 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        timestamp  outport  inport  cache_coherence_type  flit_id  flit_type  \\\n",
-       "0              11        2       4                     1        1          4   \n",
-       "1              11        2       4                     1        1          4   \n",
-       "2              84        4       2                     1        1          4   \n",
-       "3              84        4       2                     1        1          4   \n",
-       "4             216        2       4                     1        1          4   \n",
-       "...           ...      ...     ...                   ...      ...        ...   \n",
-       "108206    3268816        4       2                     6        2          2   \n",
-       "108207    3268823        4       2                     6        3          2   \n",
-       "108208    3268830        4       2                     6        4          2   \n",
-       "108209    3268837        4       2                     6        5          3   \n",
-       "108210    3268838        4       2                     2        1          4   \n",
-       "\n",
-       "        vnet  vc  src_ni  src_router  ...  packet_max_index  port_index  \\\n",
-       "0          3   9       0           0  ...                 4           8   \n",
-       "1          3   9       0           0  ...                 4           8   \n",
-       "2          3   9       3           3  ...                 4           8   \n",
-       "3          3   9       3           3  ...                 4           8   \n",
-       "4          3   9       0           0  ...                 1           8   \n",
-       "...      ...  ..     ...         ...  ...               ...         ...   \n",
-       "108206     3   9      18           2  ...                25           8   \n",
-       "108207     3   9      18           2  ...                40           8   \n",
-       "108208     3   9      18           2  ...                45           8   \n",
-       "108209     3   9      18           2  ...                40           8   \n",
-       "108210     3  10      18           2  ...                25           8   \n",
-       "\n",
-       "        cache_coherence_flit_index  flit_index  traversal_index  \\\n",
-       "0                                1           4                4   \n",
-       "1                                1           4                4   \n",
-       "2                                1           4               16   \n",
-       "3                                1           4               12   \n",
-       "4                                1           4               24   \n",
-       "...                            ...         ...              ...   \n",
-       "108206                          12          24           481008   \n",
-       "108207                          18          36           721512   \n",
-       "108208                          24          48           962016   \n",
-       "108209                          30          90          1803780   \n",
-       "108210                           2           8           160344   \n",
-       "\n",
-       "        cache_coherence_vnet_index  vnet_vc_index  vnet_vc_cc_index  target  \\\n",
-       "0                                3             27                 9       1   \n",
-       "1                                3             27                 9       0   \n",
-       "2                                3             27                 9       0   \n",
-       "3                                3             27                 9       1   \n",
-       "4                                3             27                 9       1   \n",
-       "...                            ...            ...               ...     ...   \n",
-       "108206                          18             27                54       1   \n",
-       "108207                          18             27                54       1   \n",
-       "108208                          18             27                54       1   \n",
-       "108209                          18             27                54       1   \n",
-       "108210                           6             30                18       1   \n",
-       "\n",
-       "        sim  \n",
-       "0         1  \n",
-       "1         1  \n",
-       "2         1  \n",
-       "3         1  \n",
-       "4         1  \n",
-       "...     ...  \n",
-       "108206    1  \n",
-       "108207    1  \n",
-       "108208    1  \n",
-       "108209    1  \n",
-       "108210    1  \n",
-       "\n",
-       "[108211 rows x 31 columns]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df1"
    ]
   },
   {
@@ -1373,7 +947,7 @@
     }
    ],
    "source": [
-    "df1['sim_traversal'] = df1['sim']*df1['traversal_id']\n",
+    "dfg1['sim_traversal'] = dfg1['sim']*dfg1['traversal_id']\n",
     "df1.shape"
    ]
   },
