--- a/dos results ver 3/fft_test_unbalanced.ipynb
+++ b/dos results ver 3/fft_test_unbalanced.ipynb
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1086,6 +1086,23 @@
     "import math\n",
     "def roundup(x):\n",
     "  return int(math.ceil(x / 100.0)) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(roundup(100))"
    ]
   },
   {
