--- a/dos results ver 4/router-fetch/malicious/2-fft-malicious-n-0-15-m-11.ipynb
+++ b/dos results ver 4/router-fetch/malicious/2-fft-malicious-n-0-15-m-11.ipynb
@@ -17,7 +17,8 @@
     "import numpy as np\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import math"
    ]
   },
   {
@@ -813,6 +814,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def roundup(x):\n",
+    "  return int(math.ceil(x / 1000.0)) * 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
@@ -827,15 +838,18 @@
     "\n",
     "    def timecount(df):\n",
     "        timearr = []\n",
-    "        interval = 99\n",
+    "        interval = 999\n",
     "        count = 0\n",
     "        for index, row in df.iterrows():\n",
-    "            if row[\"timestamp\"]<=interval:\n",
+    "            if row[\"timestamp\"]<=interval :\n",
     "                count+=1\n",
     "            else:\n",
     "                timearr.append([interval+1,count])\n",
     "                count=1\n",
-    "                interval+=100\n",
+    "                if (row[\"timestamp\"] == roundup(row[\"timestamp\"])):\n",
+    "                  interval = row[\"timestamp\"]+999\n",
+    "                else:\n",
+    "                  interval = roundup(row[\"timestamp\"])-1\n",
     "        timearr.append([interval+1,count])\n",
     "        return timearr\n",
     "    \n",
@@ -927,7 +941,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
