data done for 4 malicious sets

--- a/dos results ver 4/router-fetch/malicious/2-fft-malicious-n-0-15-m-11.ipynb
+++ b/dos results ver 4/router-fetch/malicious/2-fft-malicious-n-0-15-m-11.ipynb
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,18 +873,14 @@
     "    def rename(df):\n",
     "        df['traversal_id'] = df['traversal_id']+1\n",
     "        df[\"packet_count_index\"] = df[\"packet_count_decr\"]*df[\"packet_count_incr\"]\n",
-    "        df[\"packet_max_index\"] = df[\"packet_count_index\"]*df[\"max_packet_count\"]\n",
     "        df[\"port_index\"] = df[\"outport\"]*df[\"inport\"]\n",
-    "        df[\"cache_coherence_flit_index\"] = df[\"cache_coherence_type\"]*df[\"flit_id\"]\n",
-    "        df[\"flit_index\"] = df[\"cache_coherence_flit_index\"]*df[\"flit_type\"]\n",
-    "        df[\"traversal_index\"] = df[\"flit_index\"]*df[\"traversal_id\"]\n",
+    "        df[\"traversal_index\"] = df[\"cache_coherence_type\"]*df[\"flit_id\"]*df[\"flit_type\"]*df[\"traversal_id\"]\n",
     "        df[\"cache_coherence_vnet_index\"] = df[\"cache_coherence_type\"]*df[\"vnet\"]\n",
-    "        df[\"vnet_vc_index\"] = df[\"vnet\"]*df[\"vc\"]\n",
-    "        df[\"vnet_vc_cc_index\"] = df[\"vnet\"]*df[\"cache_coherence_vnet_index\"]\n",
+    "        df[\"vnet_vc_cc_index\"] = df[\"vc\"]*df[\"cache_coherence_vnet_index\"]\n",
     "        \n",
     "    rename(df)\n",
     "    \n",
-    "    df['target'] = 1\n",
+    "    df['target'] = 0\n",
     "    \n",
     "    print(df.shape)\n",
     "        \n",
@@ -893,29 +889,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(96703, 30)\n",
-      "(57667, 30)\n",
-      "(39851, 30)\n",
-      "(28688, 30)\n",
-      "(100063, 30)\n",
-      "(52701, 30)\n",
-      "(56593, 30)\n",
-      "(77712, 30)\n",
-      "(67449, 30)\n",
-      "(64099, 30)\n",
-      "(67981, 30)\n",
-      "(140275, 30)\n",
-      "(17909, 30)\n",
-      "(29449, 30)\n",
-      "(43609, 30)\n",
-      "(88873, 30)\n"
+      "(96703, 26)\n",
+      "(57667, 26)\n",
+      "(39851, 26)\n",
+      "(28688, 26)\n",
+      "(100063, 26)\n",
+      "(52701, 26)\n",
+      "(56593, 26)\n",
+      "(77712, 26)\n",
+      "(67449, 26)\n",
+      "(64099, 26)\n",
+      "(67981, 26)\n",
+      "(140275, 26)\n",
+      "(17909, 26)\n",
+      "(29449, 26)\n",
+      "(43609, 26)\n",
+      "(88873, 26)\n"
      ]
     }
    ],
