--- a/dos results ver 4/router-fetch/malicious/2-fft-malicious-n-0-15-m-12.ipynb
+++ b/dos results ver 4/router-fetch/malicious/2-fft-malicious-n-0-15-m-12.ipynb
@@ -17,7 +17,8 @@
     "import numpy as np\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import math"
    ]
   },
   {
@@ -813,7 +814,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def roundup(x):\n",
+    "  return int(math.ceil(x / 1000.0)) * 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,15 +838,18 @@
     "\n",
     "    def timecount(df):\n",
     "        timearr = []\n",
-    "        interval = 99\n",
+    "        interval = 999\n",
     "        count = 0\n",
     "        for index, row in df.iterrows():\n",
-    "            if row[\"timestamp\"]<=interval:\n",
+    "            if row[\"timestamp\"]<=interval :\n",
     "                count+=1\n",
     "            else:\n",
     "                timearr.append([interval+1,count])\n",
     "                count=1\n",
-    "                interval+=100\n",
+    "                if (row[\"timestamp\"] == roundup(row[\"timestamp\"])):\n",
+    "                  interval = row[\"timestamp\"]+999\n",
+    "                else:\n",
+    "                  interval = roundup(row[\"timestamp\"])-1\n",
     "        timearr.append([interval+1,count])\n",
     "        return timearr\n",
     "    \n",
@@ -859,18 +873,14 @@
     "    def rename(df):\n",
     "        df['traversal_id'] = df['traversal_id']+1\n",
     "        df[\"packet_count_index\"] = df[\"packet_count_decr\"]*df[\"packet_count_incr\"]\n",
-    "        df[\"packet_max_index\"] = df[\"packet_count_index\"]*df[\"max_packet_count\"]\n",
     "        df[\"port_index\"] = df[\"outport\"]*df[\"inport\"]\n",
-    "        df[\"cache_coherence_flit_index\"] = df[\"cache_coherence_type\"]*df[\"flit_id\"]\n",
-    "        df[\"flit_index\"] = df[\"cache_coherence_flit_index\"]*df[\"flit_type\"]\n",
-    "        df[\"traversal_index\"] = df[\"flit_index\"]*df[\"traversal_id\"]\n",
+    "        df[\"traversal_index\"] = df[\"cache_coherence_type\"]*df[\"flit_id\"]*df[\"flit_type\"]*df[\"traversal_id\"]\n",
     "        df[\"cache_coherence_vnet_index\"] = df[\"cache_coherence_type\"]*df[\"vnet\"]\n",
-    "        df[\"vnet_vc_index\"] = df[\"vnet\"]*df[\"vc\"]\n",
-    "        df[\"vnet_vc_cc_index\"] = df[\"vnet\"]*df[\"cache_coherence_vnet_index\"]\n",
+    "        df[\"vnet_vc_cc_index\"] = df[\"vc\"]*df[\"cache_coherence_vnet_index\"]\n",
     "        \n",
     "    rename(df)\n",
     "    \n",
-    "    df['target'] = 1\n",
+    "    df['target'] = 0\n",
     "    \n",
     "    print(df.shape)\n",
     "        \n",
@@ -879,29 +889,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(97992, 30)\n",
-      "(58499, 30)\n",
-      "(39884, 30)\n",
-      "(27630, 30)\n",
-      "(108174, 30)\n",
-      "(50255, 30)\n",
-      "(53634, 30)\n",
-      "(66804, 30)\n",
-      "(89920, 30)\n",
-      "(56360, 30)\n",
-      "(51935, 30)\n",
-      "(91737, 30)\n",
-      "(78027, 30)\n",
-      "(52184, 30)\n",
-      "(58074, 30)\n",
-      "(94994, 30)\n"
+      "(97992, 26)\n",
+      "(58499, 26)\n",
+      "(39884, 26)\n",
+      "(27630, 26)\n",
+      "(108174, 26)\n",
+      "(50255, 26)\n",
+      "(53634, 26)\n",
+      "(66804, 26)\n",
+      "(89920, 26)\n",
+      "(56360, 26)\n",
+      "(51935, 26)\n",
+      "(91737, 26)\n",
+      "(78027, 26)\n",
+      "(52184, 26)\n",
+      "(58074, 26)\n",
+      "(94994, 26)\n"
      ]
     }
    ],
@@ -909,6 +919,13 @@
     "for i in range (0,16):\n",
     "    fetch(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -927,7 +944,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
